js/js.translator/testData/incremental/invalidation/fakeOverrideInheritanceWithCrossModuleInliner/lib1/B.2.kt
abstract class AbstractClassB : AbstractClassA() {
    inline fun funB() = "b-2"
}
